Fixed letter spacing

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
-  letter-spacing: 5px;
+  letter-spacing: 1px;
   text-align: center;
 }
 
